// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`v.min, v.max, v.minLength, v.maxLength v.max 1`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": false,
      "maxValue": 0,
      "type": "Max",
    },
    "value": 1,
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.max 2`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": false,
      "maxValue": 0,
      "type": "Max",
    },
    "value": "1",
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.max 3`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": false,
      "maxValue": 0,
      "type": "Max",
    },
    "value": Array [
      1,
    ],
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.max exclusive 1`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": true,
      "maxValue": 0,
      "type": "Max",
    },
    "value": 0,
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.max exclusive 2`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": true,
      "maxValue": 0,
      "type": "Max",
    },
    "value": 1,
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.max exclusive 3`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": true,
      "maxValue": 0,
      "type": "Max",
    },
    "value": "1",
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.max exclusive 4`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": true,
      "maxValue": 0,
      "type": "Max",
    },
    "value": Array [
      0,
    ],
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.max exclusive 5`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": true,
      "maxValue": 0,
      "type": "Max",
    },
    "value": Array [
      "0",
    ],
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.maxLength 1`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": false,
      "maxLength": 2,
      "type": "MaxLength",
    },
    "value": "abc",
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.maxLength 2`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": false,
      "maxLength": 2,
      "type": "MaxLength",
    },
    "value": Array [
      1,
      2,
      3,
    ],
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.maxLength 3`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": false,
      "maxLength": 2,
      "type": "MaxLength",
    },
    "value": Object {
      "length": 3,
    },
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.maxLength 4`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": false,
      "maxLength": 2,
      "type": "MaxLength",
    },
    "value": Object {},
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.maxLength 5`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": false,
      "maxLength": 2,
      "type": "MaxLength",
    },
    "value": null,
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.maxLength 6`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": false,
      "maxLength": 2,
      "type": "MaxLength",
    },
    "value": undefined,
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.maxLength 7`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": false,
      "maxLength": 2,
      "type": "MaxLength",
    },
    "value": false,
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.maxLength 8`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": false,
      "maxLength": 2,
      "type": "MaxLength",
    },
    "value": true,
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.maxLength exclusive 1`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": true,
      "maxLength": 2,
      "type": "MaxLength",
    },
    "value": "ab",
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.maxLength exclusive 2`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": true,
      "maxLength": 2,
      "type": "MaxLength",
    },
    "value": Array [
      1,
      2,
    ],
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.maxLength exclusive 3`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": true,
      "maxLength": 2,
      "type": "MaxLength",
    },
    "value": Object {
      "length": 3,
    },
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.maxLength exclusive 4`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": true,
      "maxLength": 2,
      "type": "MaxLength",
    },
    "value": Object {},
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.maxLength exclusive 5`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": true,
      "maxLength": 2,
      "type": "MaxLength",
    },
    "value": null,
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.maxLength exclusive 6`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": true,
      "maxLength": 2,
      "type": "MaxLength",
    },
    "value": undefined,
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.maxLength exclusive 7`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": true,
      "maxLength": 2,
      "type": "MaxLength",
    },
    "value": false,
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.maxLength exclusive 8`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": true,
      "maxLength": 2,
      "type": "MaxLength",
    },
    "value": true,
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.min 1`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": false,
      "minValue": 0,
      "type": "Min",
    },
    "value": -1,
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.min 2`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": false,
      "minValue": 0,
      "type": "Min",
    },
    "value": "-1",
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.min 3`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": false,
      "minValue": 0,
      "type": "Min",
    },
    "value": Array [
      -1,
    ],
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.min exclusive 1`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": true,
      "minValue": 0,
      "type": "Min",
    },
    "value": 0,
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.min exclusive 2`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": true,
      "minValue": 0,
      "type": "Min",
    },
    "value": -1,
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.min exclusive 3`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": true,
      "minValue": 0,
      "type": "Min",
    },
    "value": "-1",
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.min exclusive 4`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": true,
      "minValue": 0,
      "type": "Min",
    },
    "value": Array [
      -1,
    ],
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.min exclusive 5`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": true,
      "minValue": 0,
      "type": "Min",
    },
    "value": Array [
      0,
    ],
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.min exclusive 6`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": true,
      "minValue": 0,
      "type": "Min",
    },
    "value": Array [
      "0",
    ],
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.minLength 1`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": false,
      "minLength": 2,
      "type": "MinLength",
    },
    "value": "a",
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.minLength 2`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": false,
      "minLength": 2,
      "type": "MinLength",
    },
    "value": Array [
      1,
    ],
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.minLength 3`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": false,
      "minLength": 2,
      "type": "MinLength",
    },
    "value": Object {},
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.minLength 4`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": false,
      "minLength": 2,
      "type": "MinLength",
    },
    "value": null,
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.minLength 5`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": false,
      "minLength": 2,
      "type": "MinLength",
    },
    "value": undefined,
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.minLength 6`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": false,
      "minLength": 2,
      "type": "MinLength",
    },
    "value": false,
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.minLength 7`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": false,
      "minLength": 2,
      "type": "MinLength",
    },
    "value": true,
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.minLength exclusive 1`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": true,
      "minLength": 2,
      "type": "MinLength",
    },
    "value": "ab",
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.minLength exclusive 2`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": true,
      "minLength": 2,
      "type": "MinLength",
    },
    "value": Array [
      1,
      2,
    ],
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.minLength exclusive 3`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": true,
      "minLength": 2,
      "type": "MinLength",
    },
    "value": "a",
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.minLength exclusive 4`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": true,
      "minLength": 2,
      "type": "MinLength",
    },
    "value": Array [
      1,
    ],
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.minLength exclusive 5`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": true,
      "minLength": 2,
      "type": "MinLength",
    },
    "value": Object {},
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.minLength exclusive 6`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": true,
      "minLength": 2,
      "type": "MinLength",
    },
    "value": null,
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.minLength exclusive 7`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": true,
      "minLength": 2,
      "type": "MinLength",
    },
    "value": undefined,
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.minLength exclusive 8`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": true,
      "minLength": 2,
      "type": "MinLength",
    },
    "value": false,
  },
]
`;

exports[`v.min, v.max, v.minLength, v.maxLength v.minLength exclusive 9`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": true,
      "minLength": 2,
      "type": "MinLength",
    },
    "value": true,
  },
]
`;
